2010-11-06  Marco Caliari <marco.caliari@univr.it>

	* polynomial/spline.m: Fit a parabola for input with 3
	elements (bug #31098).

2010-11-04  Rik  <octave@nomad.inbox5.com>

	* plot/__fltk_ginput__.m: Use semicolons to prevent internal
	  function evaluations being output to screen.

2010-11-04  Rik  <octave@nomad.inbox5.com>

	* plot/module.mk: Add __fltk_ginput__.m to list of scripts

2010-11-04  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: Update check-m-sources target to include generated
	  function files.

2010-11-04  Rik  <octave@nomad.inbox5.com>

	* general/accumarray.m, general/accumdim.m, general/blkdiag.m,
	  general/cell2mat.m, general/common_size.m,
	  general/private/__isequal__.m, general/private/__splinen__.m,
	  geometry/voronoi.m, io/textscan.m, miscellaneous/private/__xzip__.m,
	  pkg/pkg.m, plot/axis.m, plot/pareto.m, plot/private/__patch__.m,
	  statistics/base/mode.m, strings/deblank.m, strings/strcat.m,
	  strings/strmatch.m, strings/strtrim.m, strings/untabify.m:
	  Reverse previous changeset.  Use all lower case for "uniformoutput"
	  option.

2010-11-03  Rik  <octave@nomad.inbox5.com>

	* general/accumdim.m, general/cell2mat.m, general/common_size.m,
	  general/structfun.m, pkg/pkg.m, strings/untabify.m: Use CamelCase
	  for 'UniformOutput' option to cellfun.

2010-11-03  Rik  <octave@nomad.inbox5.com>

	* scripts/plot/plotyy.m, scripts/plot/xlim.m, scripts/plot/ylim.m,
	  scripts/plot/zlim.m: Fix typos in docstring and demo string.

2010-11-03  Rik  <octave@nomad.inbox5.com>

	* general/common_size.m, miscellaneous/private/__xzip__.m, 
	  miscellaneous/what.m, plot/pareto.m, plot/private/__patch__.m:
	  Use function handle as input to cellfun rather than quoted function
	  name or anonymous function wrapper.

2010-11-03  Konstantinos Poulios  <logari81@googlemail.com>

	* plot/axis.m: Making 'axis equal' equivalent to 'daspect([1,1,1])'.

2010-11-03  Konstantinos Poulios  <logari81@googlemail.com>
